testsuite/tests/parser/should_fail/T18251f.hs
module T18251f where

f ! x y = x + y
