testsuite/tests/parser/should_fail/T18251f.stderr

T18251f.hs:3:5: error:
    Parse error in pattern: x
    In a function binding for the ‘!’ operator.
